--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jsmonday/imgproxy",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "ImgProxy Library for Node.js that works both on browser and server",
   "main": "index.js",
   "private": false,
@@ -17,9 +17,11 @@
   ],
   "author": "Michele Riva <ciao@micheleriva.it>",
   "license": "MIT",
+  "collective": {
+    "url": "https://opencollective.com/jsmonday"
+  },
   "dependencies": {
-    "create-hmac": "1.1.7",
-    "opencollective-postinstall": "^2.0.2"
+    "create-hmac": "1.1.7"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
