--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "url": "https://opencollective.com/jsmonday"
   },
   "dependencies": {
-    "create-hmac": "1.1.7"
+    "create-hmac": "1.1.7",
+    "opencollective-postinstall": "2.0.2"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
